# DataStructuresCpp

./: .gitignore  CMakeLists.txt  README.md
DataStructures/: BTree.hpp  DSBase.hpp  DynamicArray.hpp  Hash.hpp  Heap.hpp  List.hpp  Queue.hpp  Set.hpp  Stack.hpp  Tuple.hpp
examples/: basic_usage.cpp
include/dsc/: dsc.hpp
include/dsc/algorithms/: bitwise.hpp  dynamic_programming.hpp  geometry.hpp  graph.hpp  math.hpp  search.hpp  sequence.hpp  sort.hpp  string.hpp  utilities.hpp
include/dsc/containers/: array.hpp  bitset.hpp  deque.hpp  fenwick_tree.hpp  hash_map.hpp  hash_set.hpp  linked_list.hpp  priority_queue.hpp  queue.hpp  segment_tree.hpp  skip_list.hpp  sparse_set.hpp  stack.hpp  tree_map.hpp  tree_set.hpp  trie.hpp  union_find.hpp
include/dsc/core/: allocator.hpp  hash.hpp  iterator.hpp  memory.hpp  optional.hpp  primitives.hpp  traits.hpp
